[package]
name = "clutch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.2.2"
anyhow = "1.0.53"
clap = { version = "3.0.10", features = ["derive"] }
indicatif = "0.16.2"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.9", features = ["blocking", "rustls-tls"] }

[dev-dependencies]
rand = "0.8.4"
